--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="og:title" content="Vyral">
 	<meta name="og:type" content="website">
 	<meta name="og:url" content="">
-
+<meta name="facebook-domain-verification" content="z88k7uestee5xt5jzgyk5ha4lpi2i3" />
 	<link rel="stylesheet" id="base-css" href="lib/us-base.min.css" type="text/css" media="all">
 	<link rel="stylesheet" id="stylebase-css" href="lib/style.min.css" type="text/css" media="all">
 	<link rel="stylesheet" id="custom-css" href="lib/custom_css.min.css" type="text/css" media="all">
